# carmen

./: .containerignore  .env.extractor.example  .env.search.example  .gitignore  Cargo.toml  Containerfile  Containerfile.dev  LICENSE  README.md  compose.yml  dev.compose.yml  docker-compose.yml
carmen-api/: Cargo.toml
carmen-api/src/: app.rs  config.rs  main.rs
carmen-api/src/routers/: apidoc.rs  collections.rs  documents.rs  error.rs  extractions.rs  mod.rs  search.rs
carmen-api/src/service/: error.rs  mod.rs  pagination.rs
carmen-api/src/service/collections/: dto.rs  mod.rs
carmen-api/src/service/documents/: dto.rs  mod.rs
carmen-api/src/service/extractions/: dto.rs  mod.rs
carmen-api/src/service/search/: dto.rs  mod.rs
carmen-db/: Cargo.toml
carmen-db/migrations/: 0001_setup.sql
carmen-db/src/: chunks.rs  collections.rs  documents.rs  error.rs  extractions.rs  indexing.rs  lib.rs  migrate.rs  search.rs  types.rs
carmen-extractor/: Cargo.toml
carmen-extractor/src/: config.rs  document.rs  main.rs  task.rs  worker.rs
carmen-extractor/src/documents/: diff.rs  mod.rs  update.rs
carmen-extractor/src/downloaders/: git.rs  mod.rs
carmen-extractor/src/extractors/: git.rs  github_wiki.rs  man.rs  mod.rs
carmen-extractor/src/extractors/man/: mod.rs  providers.rs  spec.rs
carmen-indexer/: Cargo.toml
carmen-indexer/src/: config.rs  indexer.rs  main.rs  task.rs  worker.rs
carmen-migrations/: Cargo.toml
carmen-nlp/: Cargo.toml
carmen-nlp/src/: embedder.rs  env.rs  error.rs  lang.rs  lib.rs  reranker.rs
carmen-nlp/src/lang/: detect.rs  mod.rs
carmen-s3/: Cargo.toml
carmen-s3/src/: error.rs  storage.rs
carmen-search/: Cargo.toml
carmen-search/src/: app.rs  config.rs  main.rs
carmen-search/src/routers/: apidoc.rs  collections.rs  error.rs  mod.rs  search.rs
carmen-search/src/service/: collections.rs  error.rs  mod.rs
carmen-search/src/service/collections/: dto.rs  mod.rs
carmen-search/src/service/documents/: dto.rs  mod.rs
carmen-search/src/service/search/: mod.rs
carmen-storage/: Cargo.toml
carmen-storage/src/: env.rs  error.rs  lib.rs  stream.rs
carmen-storage/src/drivers/: fs.rs  mod.rs  s3.rs
embedding/: Containerfile  README.md  main.py  pyproject.toml
embedding/scripts/: prepare_model.py
embedding/src/: config.py  main.py
embedding/src/adapters/: chunks.py  search.py
embedding/src/chunks/: main.py  models.py  processor.py
embedding/src/common/: config.py  embedding.py
embedding/src/models/: chunks.py  config.py  search.py
embedding/src/search/: app.py  depends.py  main.py
embedding/src/service/: embedding.py
env/: .env.rustfs.example  .env.s3.example
extractor/: Cargo.toml  Containerfile  README.md  pyproject.toml
extractor/src/: adapter.rs  config.py  config.rs  documents.rs  lib.rs  main.py  main.rs  models.py  models.rs  processor.py  s3.py  storage.rs
extractor/src/extractors/: markdown.rs  mod.rs  plaintext.rs
extractor/src/processor/: character.rs  mod.rs  paragraphs.rs
gateway/: nginx.conf
langdetector/: Containerfile  README.md  main.py  pyproject.toml
langdetector/src/: config.py  detector.py  main.py
search/: .gitignore  Containerfile  README.md  go.mod  go.sum  main.go
search/chunk/: model.go
search/cmd/search/: main.go
search/db/: db.go
search/document/: model.go
search/pkg/adapter/: chunk.go  doc.go  search.go
search/pkg/apperror/: apperror.go
search/pkg/chunk/: model.go
search/pkg/client/: doc.go  embedding.go  langdetector.go
search/pkg/config/: config.go  env.go
search/pkg/controller/: bindings.go  doc.go  document.go  search.go  utils.go  workspace.go
search/pkg/dal/: db.go  s3.go
search/pkg/db/: db.go
search/pkg/document/: model.go
search/pkg/dto/: chunk.go  doc.go  document.go  search.go  workspace.go
search/pkg/infra/: db.go  kafka.go  s3.go
search/pkg/model/: chunk.go  doc.go  document.go  workspace.go
search/pkg/repository/: chunk.go  doc.go  document.go  scopes.go  utils.go  workspace.go
search/pkg/search/: document_storage.go  models.go  workspace_service.go
search/pkg/service/: doc.go  document.go  langdetector.go  search.go  workspace.go
search/pkg/workspace/: model.go
search/workspace/: model.go
