[workspace]
resolver = "3"
members = [
    "carmen-db",
    "carmen-indexer",
    "carmen-search",
]

[workspace.package]
authors = ["Ivan Shelepugin <shelepuginivanm@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
fastembed = "5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "postgres", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.23", features = ["serde"] }

carmen-db = { path = "./carmen-db" }
