[package]
name = "carmen-db"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

[[bin]]
name = "carmen-migrate"
path = "src/migrate.rs"
