[package]
name = "carmen-db"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
pgvector = { version = "0.4", features = ["sqlx"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

[[bin]]
name = "carmen-migrate"
path = "src/migrate.rs"
