[package]
name = "carmen-extractor"
description = "Carmen's documentation extractor."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
enum_dispatch = "0.3"
env_logger.workspace = true
git2 = { version = "0.21.0", features = ["https"] }
log.workspace = true
reqwest = "0.13"
serde_json.workspace = true
sha2 = "0.11"
sqlx.workspace = true
strum.workspace = true
tempfile = "3"
tokio.workspace = true
uuid.workspace = true
walkdir = "2"

carmen-db.workspace = true
carmen-s3.workspace = true
