[package]
name = "carmen-indexer"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
fastembed.workspace = true
log.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true

carmen-db.workspace = true
carmen-s3.workspace = true
