[package]
name = "carmen-indexer"
description = "Carmen's document indexer."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
sqlx.workspace = true
text-splitter = { version = "0.32.0", features = ["markdown"] }
tokio.workspace = true
uuid.workspace = true

carmen-db.workspace = true
carmen-nlp.workspace = true
carmen-storage.workspace = true
