[package]
name = "carmen-search"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa = { version = "5", features = ["uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid.workspace = true

carmen-db.workspace = true
