[package]
name = "carmen-search"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
env_logger.workspace = true
fastembed.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa = { version = "5", features = ["chrono", "url", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid.workspace = true
url = { version = "2.5", features = ["serde"] }

carmen-db.workspace = true
carmen-s3.workspace = true
