[package]
name = "carmen-storage"
description = "Carmen's shared storage logic."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
axum = ["dep:axum"]

[dependencies]
axum = { workspace = true, optional = true }
enum_dispatch.workspace = true
rust-s3 = "0.37"
thiserror.workspace = true
tokio-util = "0.7"
tokio.workspace = true
uuid.workspace = true
