[project]
name = "embedding"
version = "0.1.0"
description = "Carmen - Embedding microservice"
authors = [
  { name = "Ivan Shelepugin", email = "shelepuginivanm@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "kafka-python>=2.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sentence-transformers>=5.2.3",
]
