[package]
name = "extractor"
description = "Carmen - Extractor microservice"
authors = [
    "Ivan Shelepugin <shelepuginivanm@gmail.com>"
]
version = "0.1.0"
edition = "2024"

[dependencies]
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
