[package]
name = "extractor"
description = "Carmen - Extractor microservice"
authors = [
    "Ivan Shelepugin <shelepuginivanm@gmail.com>"
]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
comrak = "0.50.0"
env_logger = "0.11.9"
futures = "0.3.32"
log = "0.4"
rdkafka = "0.39.0"
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
