[project]
name = "extractor"
version = "0.1.0"
description = "Carmen - Extraction microservice"
authors = [
  { name = "Ivan Shelepugin", email = "shelepuginivanm@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.83",
    "kafka-python>=2.3.0",
    "langchain-text-splitters>=1.1.1",
    "pydantic-settings>=2.13.1",
]
